--- a/en/faq.html
+++ b/en/faq.html
@@ -13,10 +13,16 @@
   <link rel="manifest" href="/favicon/site.webmanifest" />
   <link rel="canonical" href="https://hausarztpraxis-bazara.de/faq" />
   <meta name="robots" content="noindex, follow">
-
+  <script>
+    (function() {
+      if (window.matchMedia("(max-width: 768px)").matches) {
+        document.documentElement.classList.add('is-mobile-device');
+      }
+    })();
+  </script>
   <!-- Google Fonts Einbindung -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-  
+
   <style>
     ::selection {
       background-color: #341700;  /* Hintergrundfarbe der Markierung */
