--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,13 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Hausarztpraxis Bazara" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
-
+  <script>
+    (function() {
+      if (window.matchMedia("(max-width: 768px)").matches) {
+        document.documentElement.classList.add('is-mobile-device');
+      }
+    })();
+  </script>
   <!-- Google Fonts Einbindung -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   
