--- a/en/services.html
+++ b/en/services.html
@@ -3278,7 +3278,7 @@
       <div class="footer-contact-hours-container">
         <div class="footer-contact-column">
           <p>Contact:</p>
-          <p>Alte Hellersdorfer Str.</p>
+          <p>Alte Hellersdorfer Str. 123</p>
           <p>12629 Berlin</p>
           <p>Phone: +49 (0) 30 9939 168</p>
           <p>Fax number: +49 (0) 30 9940 2335</p>
