--- a/en/index.html
+++ b/en/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-<title>General Practice Bazara – Safia Bazara | Internal Medicine & Transfusion Medicine in Berlin Hellersdorf</title>  <meta name="description" content="Hausarztpraxis Bazara – Ihre freundliche Praxis für Innere Medizin und Transfusionsmedizin in Berlin-Hellersdorf. Safia Bazara bietet umfassende hausärztliche Versorgung, Vorsorge, Diagnostik und chronische Betreuung. Termine telefonisch vereinbaren.">
+  <title>General Practice Bazara – Safia Bazara | Internal Medicine & Transfusion Medicine in Berlin Hellersdorf</title>  <meta name="description" content="Hausarztpraxis Bazara – Ihre freundliche Praxis für Innere Medizin und Transfusionsmedizin in Berlin-Hellersdorf. Safia Bazara bietet umfassende hausärztliche Versorgung, Vorsorge, Diagnostik und chronische Betreuung. Termine telefonisch vereinbaren.">
   <meta name="author" content="Hausarztpraxis Bazara – Safia Bazara">
   <meta name="keywords" content="Hausarzt Berlin, Allgemeinmedizin Berlin, Innere Medizin, Hausarztpraxis Bazara, Safia Bazara, Arztpraxis Hellersdorf, Vorsorgeuntersuchungen, Blutdruckmessung, Impfungen, chronische Erkrankungen, Langzeit-EKG, DMP-Programme, Patientenservice Berlin">  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
@@ -2107,7 +2107,7 @@
       </div>
       <div class="anfahrt-row">
         <div class="left-col">Tram:</div>
-        <div class="right-col">Line 6 oder 18</div>
+        <div class="right-col">Line M6 oder 18</div>
       </div>
       <div class="anfahrt-row">
         <div class="left-col">Bus:</div>
@@ -2119,7 +2119,7 @@
       </div>
       <div class="anfahrt-row">
         <div class="left-col">Car:</div>
-        <div class="right-col">Good parking facilities</div>
+        <div class="right-col">Adequate parking available</div>
       </div>
     </div>
   </section>
