--- a/index.html
+++ b/index.html
@@ -2113,7 +2113,7 @@
       </div>
       <div class="anfahrt-row">
         <div class="left-col">Straßenbahn:</div>
-        <div class="right-col">Linie 6 oder 18</div>
+        <div class="right-col">Linie M6 oder 18</div>
       </div>
       <div class="anfahrt-row">
         <div class="left-col">Bus:</div>
@@ -2125,7 +2125,7 @@
       </div>
       <div class="anfahrt-row">
         <div class="left-col">Auto:</div>
-        <div class="right-col">gute Parkmöglichkeiten</div>
+        <div class="right-col">ausreichende Parkmöglichkeiten</div>
       </div>
     </div>
   </section>
@@ -2154,7 +2154,7 @@
 
             if (i === 2) {
               title = "Empathie";
-              description = "Wir hören zu, nehmen Sorgen ernst und behandeln jede Person mit Respekt und Mitgefühl.";
+              description = "Wir hören zu, nehmen Ihre Sorgen ernst und behandeln jede Person mit Respekt und Mitgefühl.";
             } else if (i === 3) {
               title = "Kompetenz";
               description = "Unsere medizinischen Entscheidungen basieren auf aktuellem Wissen und langjähriger Erfahrung.";
@@ -2226,7 +2226,7 @@
       <div class="footer-contact-hours-container">
         <div class="footer-contact-column">
           <p>Kontakt:</p>
-          <p>Alte Hellersdorfer Str.</p>
+          <p>Alte Hellersdorfer Str. 123</p>
           <p>12629 Berlin</p>
           <p>Telefon: +49 (0) 30 9939 168</p>
           <p>Telefax: +49 (0) 30 9940 2335</p>
