--- a/leistungen.html
+++ b/leistungen.html
@@ -2498,7 +2498,7 @@
         bottom: 27.5px; /* Vertikal auf Höhe des Kreises */
         left: 0;        /* Linke Kante des Rechtecks am linken Bildrand (finale Position) */
         right: -20px;  /* User-angepasst: rechte Kante 20px über rechten Rand des Containers */
-        /* width: 160px; entfernt, Breite wird durch left/right definiert */
+        width: 208px;
         height: 50px; /* Gleiche Höhe wie der Kreis */
         background-color: #6e370e; /* Akzentfarbe für Hintergrund */
         color: #ffffff; /* Weißer Text */
