--- a/faq.html
+++ b/faq.html
@@ -63,7 +63,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
+      background-color: #6e370e; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
       overflow-x: hidden; /* Verhindert horizontales Scrollen für die gesamte Seite */
       /* padding-top: 93px; */ /* Platz für die fixe Navigationsleiste, falls benötigt */
