--- a/faq.html
+++ b/faq.html
@@ -66,6 +66,7 @@
       background-color: #6e370e; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
       overflow-x: hidden; /* Verhindert horizontales Scrollen für die gesamte Seite */
+      overflow-y: visible; /* Verhindert, dass body eine eigene vertikale Scrollbar bekommt, wenn html schon scrollt */
       /* padding-top: 93px; */ /* Platz für die fixe Navigationsleiste, falls benötigt */
     }
 
