--- a/en/faq.html
+++ b/en/faq.html
@@ -63,7 +63,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
+      background-color: #6e370e; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
       overflow-x: hidden; /* Verhindert horizontales Scrollen für die gesamte Seite */
       overflow-y: visible; /* Verhindert, dass body eine eigene vertikale Scrollbar bekommt, wenn html schon scrollt */
