--- a/en/faq.html
+++ b/en/faq.html
@@ -65,8 +65,8 @@
       font-family: 'Inter', sans-serif;
       background-color: #6e370e; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
-      overflow-x: hidden; /* Verhindert horizontales Scrollen für die gesamte Seite */
-      overflow-y: visible; /* Verhindert, dass body eine eigene vertikale Scrollbar bekommt, wenn html schon scrollt */
+      overflow-x: hidden;    /* Verhindert horizontales Scrollen für die gesamte Seite */
+      overflow-y: hidden;    /* Verhindert, dass body eine eigene vertikale Scrollbar bekommt */
       /* padding-top: 93px; */ /* Platz für die fixe Navigationsleiste, falls benötigt */
     }
 
