--- a/en/faq.html
+++ b/en/faq.html
@@ -1666,9 +1666,9 @@
     </div>
     <ul class="nav-links">
       <li><a href="/en/"><span class="menu-item-number">01</span>Home</a></li>
-      <li><a href="/leistungen"><span class="menu-item-number">02</span>Services</a></li>
-      <li><a href="/faq"><span class="menu-item-number">03</span>FAQ</a></li>
-      <li><a href="/kontakt"><span class="menu-item-number">04</span>Contact</a></li>
+      <li><a href="/en/services"><span class="menu-item-number">02</span>Services</a></li>
+      <li><a href="/en/faq"><span class="menu-item-number">03</span>FAQ</a></li>
+      <li><a href="/en/contact"><span class="menu-item-number">04</span>Contact</a></li>
       <!-- Language Switcher (kopiert von index.html) -->
       <li class="lang-switcher">
         <a href="/faq" class="lang-option" hreflang="de" aria-label="Sprache auf Deutsch wechseln">DE</a>
