--- a/en/faq.html
+++ b/en/faq.html
@@ -1858,8 +1858,8 @@
         </div>
       </div>
       <div class="footer-bottom-right-links">
-        <a href="/imprint">Imprint</a>
-        <a href="/privacypolicy">Privacy policy</a>
+        <a href="/en/imprint">Imprint</a>
+        <a href="/en/privacypolicy">Privacy policy</a>
       </div>
     </div>
   </footer>
