--- a/en/index.html
+++ b/en/index.html
@@ -2244,8 +2244,8 @@
         </div>
       </div>
       <div class="footer-bottom-right-links">
-        <a href="/imprint">Imprint</a>
-        <a href="/privacypolicy">Privacy Policy</a>
+        <a href="/en/imprint">Imprint</a>
+        <a href="/en/privacypolicy">Privacy Policy</a>
       </div>
     </div>
   </footer>
