--- a/en/contact.html
+++ b/en/contact.html
@@ -1777,9 +1777,9 @@
     </div>
     <ul class="nav-links">
       <li><a href="/en/"><span class="menu-item-number">01</span>Home</a></li>
-      <li><a href="/leistungen"><span class="menu-item-number">02</span>Services</a></li>
-      <li><a href="/faq"><span class="menu-item-number">03</span>FAQ</a></li>
-      <li><a href="/kontakt"><span class="menu-item-number">04</span>Contact</a></li>
+      <li><a href="/en/services"><span class="menu-item-number">02</span>Services</a></li>
+      <li><a href="/en/faq"><span class="menu-item-number">03</span>FAQ</a></li>
+      <li><a href="/en/contact"><span class="menu-item-number">04</span>Contact</a></li>
       <!-- Language Switcher (kopiert von index.html) -->
       <li class="lang-switcher">
         <a href="/kontakt" class="lang-option" hreflang="de" aria-label="Sprache auf Deutsch wechseln">DE</a>
@@ -1972,8 +1972,8 @@
         </div>
       </div>
       <div class="footer-bottom-right-links">
-        <a href="/imprint">Imprint</a>
-        <a href="/privacypolicy">Privacy policy</a>
+        <a href="/en/imprint">Imprint</a>
+        <a href="/en/privacypolicy">Privacy policy</a>
       </div>
     </div>
   </footer>
