--- a/en/imprint.html
+++ b/en/imprint.html
@@ -788,8 +788,8 @@
     </div>
     <ul class="nav-links" id="nav-links-list">
       <li><a href="/en/"><span class="menu-item-number">01</span>Home</a></li>
-      <li><a href="/leistungen"><span class="menu-item-number">02</span>Services</a></li>
-      <li><a href="/faq"><span class="menu-item-number">03</span>FAQ</a></li>
+      <li><a href="/en/services"><span class="menu-item-number">02</span>Services</a></li>
+      <li><a href="/en/faq"><span class="menu-item-number">03</span>FAQ</a></li>
       <li><a href="/kontakt"><span class="menu-item-number">04</span>Contact</a></li>
       <li class="lang-switcher">
         <a href="/impressum" class="lang-option" hreflang="de" aria-label="Switch language to German">DE</a>
@@ -913,8 +913,8 @@
         </div>
       </div>
       <div class="footer-bottom-right-links">
-        <a href="/imprint.html">Imprint</a>
-        <a href="/privacy-policy">Privacy Policy</a>
+        <a href="/en/imprint">Imprint</a>
+        <a href="/en/privacypolicy">Privacy Policy</a>
       </div>
     </div>
   </footer>
