--- a/kontakt.html
+++ b/kontakt.html
@@ -1773,7 +1773,7 @@
       <!-- Language Switcher (kopiert von index.html/faq.html) -->
       <li class="lang-switcher">
         <a href="#" class="lang-option active-lang" hreflang="de" aria-label="Sprache auf Deutsch wechseln">DE</a>
-        <a href="/en/kontakt" class="lang-option" hreflang="en" aria-label="Switch language to English">EN</a>
+        <a href="/en/contact" class="lang-option" hreflang="en" aria-label="Switch language to English">EN</a>
       </li>
     </ul>
     <div class="hamburger-menu" role="button" aria-label="Menü umschalten" aria-expanded="false" aria-controls="nav-links-list">
