--- a/en/imprint.html
+++ b/en/imprint.html
@@ -826,7 +826,7 @@
 
     <p><strong>Responsible Medical Association:</strong></p>
     <p>
-      Berlin Medical Association<br>
+      Ärztekammer Berlin<br>
       Friedrichstraße 16<br>
       10969 Berlin<br>
       Website: <a href="https://www.aerztekammer-berlin.de" target="_blank" rel="noopener noreferrer">www.aerztekammer-berlin.de</a>
