--- a/impressum.html
+++ b/impressum.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Hausarztpraxis Bazara" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
+  <link rel="canonical" href="https://hausarztpraxis-bazara.de/impressum" />
   <script>
     (function() {
       if (window.matchMedia("(max-width: 768px)").matches) {
